# cLAWd

./: .env.example  .gitignore  CHECKLIST.md  CLAUDE.md  DESKTOP_BUILD.md  Makefile  README.md  SPEC_QUESTIONS.md  install.sh  pnpm-lock.yaml  pyproject.toml  spec.md
.github/workflows/: release.yml
apps/api/src/: main.py  paths.py
apps/api/src/costs/: __init__.py  emphasis_weights.py  estimator.py  pricing.py  tracker.py
apps/api/src/credentials/: __init__.py  keyring_backend.py  validation.py
apps/api/src/data/: __init__.py  db.py  flashcard_state.py  models.py
apps/api/src/features/: __init__.py  attack_sheet.py  case_brief.py  chat_session.py  cold_call.py  corpus_export.py  corpus_restore.py  emphasis_mapper.py  flashcards.py  global_search.py  hypo.py  irac_grading.py  lineage.py  mc_questions.py  outline.py  past_exam_ingest.py  pollack_patterns.py  professor_profile.py  rubric_extraction.py  socratic_drill.py  syllabus_ingest.py  synthesis.py  tasks.py  transcript_ingest.py  what_if.py
apps/api/src/llm/: __init__.py  anthropic_compat.py
apps/api/src/primitives/: __init__.py  block_segmenter.py  fuzzy_resolver.py  generate.py  ingest.py  marker_runner.py  prompt_loader.py  pymupdf4llm_runner.py  retrieve.py  template_renderer.py  toc_extractor.py  verify.py
apps/api/src/routes/: __init__.py  artifacts.py  books.py  corpora.py  costs.py  credentials.py  export.py  features.py  flashcards.py  ingest.py  lineage.py  profiles.py  retrieve.py  search.py  system.py  tasks.py  transcripts.py  uploads.py
apps/api/tests/: conftest.py  llm_replay.py  test_health.py
apps/api/tests/integration/: test_case_brief.py  test_corpora_routes.py  test_corpus_restore.py  test_e2e_full_flow.py  test_emphasis_route.py  test_export_and_lineage_routes.py  test_flashcards_routes.py  test_irac_grading_route.py  test_phase5_static_routes.py  test_profiles_routes.py  test_robustness.py  test_routes.py  test_rubric_extraction_route.py  test_search_route.py  test_socratic_cold_call_routes.py  test_transcripts_routes.py  test_uploads_and_tasks_routes.py
apps/api/tests/unit/: test_attack_sheet.py  test_block_segmenter.py  test_budget.py  test_chat_session.py  test_cold_call.py  test_corpus_export.py  test_costs.py  test_credentials.py  test_db.py  test_emphasis_mapper.py  test_emphasis_weights.py  test_flashcards_feature.py  test_fuzzy_resolver.py  test_generate.py  test_global_search.py  test_hypo.py  test_ingest_book.py  test_irac_grading.py  test_lineage.py  test_llm_replay.py  test_marker_runner.py  test_mc_questions.py  test_models.py  test_outline.py  test_page_markers.py  test_past_exam_ingest.py  test_pollack_patterns.py  test_professor_profile_feature.py  test_professor_profile_model.py  test_prompt_loader.py  test_retrieve.py  test_rubric_extraction.py  test_sm2_scheduler.py  test_socratic_drill.py  test_syllabus_ingest.py  test_synthesis.py  test_tasks.py  test_template_renderer.py  test_toc_extractor.py  test_transcript_ingest.py  (+2 more)
apps/web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/artifacts/[artifactId]/: ClientPage.tsx  page.tsx
apps/web/app/attack-sheets/: page.tsx
apps/web/app/cold-call/[blockId]/: ClientPage.tsx
apps/web/app/cold-call/random/: page.tsx
apps/web/app/corpora/[corpusId]/: ClientPage.tsx  page.tsx
apps/web/app/corpora/[corpusId]/books/[bookId]/: ClientPage.tsx  page.tsx
apps/web/app/first-run/: page.tsx
apps/web/app/help/api-key/: page.tsx
apps/web/app/outline/: page.tsx
apps/web/app/practice/: page.tsx
apps/web/app/search/: page.tsx
apps/web/app/settings/: layout.tsx
apps/web/app/settings/api-keys/: page.tsx
apps/web/app/settings/costs/: page.tsx
apps/web/app/settings/models/: page.tsx
apps/web/app/socratic/[blockId]/: page.tsx
apps/web/app/synthesis/: page.tsx
apps/web/app/transcripts/[transcriptId]/emphasis/: ClientPage.tsx  page.tsx
apps/web/app/upload/: page.tsx
apps/web/components/: ArtifactMarkdown.tsx  ArtifactPicker.tsx  ChatPanel.tsx  CostBadge.tsx  FeatureRunOverlay.tsx  FirstRunGate.tsx  KeyInputPanel.tsx  LoadingButton.tsx  PageNumberInput.tsx  PdfOrPasteField.tsx  SpaFallbackRouter.tsx  Spinner.tsx  TaskProgress.tsx  TopBar.tsx  TopicPromptDialog.tsx
apps/web/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  tabs.tsx
apps/web/lib/: api.ts  draft.ts  format.ts  uploadEndpoint.ts  utils.ts
apps/web/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/src/: main.rs
apps/web/tests/components/: CostBadge.test.tsx  LoadingButton.test.tsx  Spinner.test.tsx  TaskProgress.test.tsx
apps/web/tests/lib/: api.test.ts  format.test.ts
config/: default_professor_profile.toml  emphasis_weights.toml  models.toml  pricing.toml
scripts/: build_app.sh  build_python_bundle.sh  cLAWd-backend.spec  cLAWd_backend_entry.py  dev.sh  generate_icons.py  stop.sh
tests/manual/: README.md
