[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lawschool-study-system"
version = "0.1.0"
description = "Local-first study system for 1L doctrinal courses (spec.md is source of truth)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlmodel>=0.0.22",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "sqlite-vec>=0.1.6",
    "keyring>=25.0",
    "cryptography>=42.0",
    "anthropic>=0.40",
    "httpx>=0.27",
    "structlog>=24.0",
    "click>=8.1",
    "python-multipart>=0.0.9",
    "rapidfuzz>=3.10",
    "tomli-w>=1.0",
    "pdfplumber>=0.11",
    "pymupdf>=1.24",
    "pymupdf4llm>=0.0.17",
]

[project.optional-dependencies]
marker = [
    "marker-pdf>=1.2",
]
audio = [
    "faster-whisper>=1.0",
]
# Optional Voyage AI SDK. Per spec §4.2 embeddings are optional with a BM25
# lexical fallback, and our credentials/validation path hits the REST endpoint
# directly via httpx — nothing imports the `voyageai` Python package today.
# We keep this extra so an upgrade path exists if/when we adopt the SDK,
# without forcing the install on Python 3.14 where stable wheels lag.
voyage = [
    "voyageai>=0.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "pytest-httpx>=0.30",
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.11",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://example.invalid/lawschool"

# Package discovery — code lives under apps/api/src (spec §7.2).
[tool.setuptools]
package-dir = { "" = "apps/api/src" }

[tool.setuptools.packages.find]
where = ["apps/api/src"]
include = ["primitives*", "features*", "costs*", "credentials*", "data*"]

# ---- Tooling ----

[tool.pytest.ini_options]
testpaths = ["apps/api/tests"]
pythonpath = ["apps/api/src", "apps/api"]  # `apps/api` so `tests.llm_replay` is importable
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "live_api: runs against a real API (gated on TEST_ANTHROPIC_KEY)",
    "slow: takes >1s",
    "e2e: full-pipeline test",
]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["apps/api/src", "apps/api/tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "N",             # pep8-naming
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "PL",            # pylint subset
    "RUF",           # ruff-native
]
ignore = [
    "E501",          # line length handled by formatter
    "PLR0913",       # too many args — spec-driven APIs have lots of args
    "PLR0915",       # too many statements — fixture/test builders can be verbose
    "PLR0912",       # too many branches — spec-driven dispatch is naturally branchy
    "RUF001",        # ambiguous unicode — we intentionally use en-dash for typography
    "RUF002",        # ambiguous unicode in docstrings — ditto
    "RUF003",        # ambiguous unicode in comments — ditto
    "UP042",         # StrEnum — SQLModel columns bind cleaner with (str, Enum) for now
    "PLC0415",       # in-function imports — intentionally deferred (keyring, sqlite-vec)
    "PLW0603",       # `global` — intentional for module-level engine/session singletons
    "N818",          # Error-suffix on exception names — spec names (PreflightRequired) are fine
    "B008",          # function call in Depends() / Body() default — required FastAPI pattern
]

[tool.ruff.lint.per-file-ignores]
"apps/api/tests/**" = [
    "PLR2004",       # magic values in asserts are the point of assertions
    "PLR0913",
    "N802",
    "RUF043",        # pytest match= patterns aren't real regex consumers
    "SIM117",        # nested with blocks are fine in test setup
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
mypy_path = ["apps/api/src"]
packages = ["primitives", "features", "costs", "credentials", "data"]

[[tool.mypy.overrides]]
module = [
    "marker.*",
    "pymupdf4llm.*",
    "faster_whisper.*",
    "sqlite_vec.*",
    "voyageai.*",
]
ignore_missing_imports = true
