[package]
name = "cLAWd"
version = "0.1.0"
description = "cLAWd — local-first 1L study system"
authors = ["Kevin Maynard"]
license = "Proprietary"
repository = "https://github.com/kevinMaynard20/cLAWd"
edition = "2021"

# Pinned to Tauri v2 — the v2 API is the one we need for sidecar lifecycle
# (window event hooks that synchronously kill the spawned backend before
# the WebView shuts down).
[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `devtools` enables right-click → Inspect Element in release builds. The
# WebView console is the only place where CSP / CORS / JS upload errors
# surface — without it, "network error" messages have no diagnostic trail
# in production. The runtime cost is negligible (a feature flag in WebKit).
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `dirs` for ~/Library/Logs path resolution (sidecar log writer).
dirs = "5"

# Compiler tuning. The shell is tiny; aggressive lto pays off with a
# smaller .app and a snappier first launch.
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
